		Filerequest response messages now have a random quote added.
		The binkp driver now sends 8.3 mangled filenames if that 
		option is set for the remote node in the setup.
		The hydra driver now sends 8.3 mangled filenames and long
		filenames as specified in the specs.
		Corrected the location of the modem lockfile on FreeBSD.
		Fixes for Sparc systems.

	mbout:
		Fixes for Sparc systems.

	mbtask:
		Changed to handle the External Doors flag in the lastcaller
		information.
		On new systems, ~/etc/config.data and ~/etc/task.data are
		created with mode 0640.
		On new systems, the DOS path isn't set anymore by default,
		most people don't need it.
		Starting utilities is now more relaxed using a 3 seconds
		pause timer. Fixed some potential Sparc problems.
		On new systems, all paths for MBSE are now created in the
		/opt/mbse root.
		When scanning outbound, flags are set if flo or mail pkt files
		are present.
		When the internet connection status changes, the outbound is
		rescanned.

	mbmon:
		Changed the lastcaller screen to display the External Door
		information.
		When lastcaller info is scrolling, the lines are first proper
		erased.
		Fixes for Sparc systems.

	mbmsg:
		Corrected header in logfile for pack function.
		Fixes for Sparc systems.

	import:
		Removed users import, could not work anymore.

	mbfido:
		When running in mbmail mode, it will try to get the lock on
		the program for 10 minutes before aborting and waits until
		another mbfido program is ready.
		Fixed the problem that the KillSent flag was set on processed
		netmail.
		Reset the KillSent and Hold flags when storing netmail in the
		message base.
		The tic file import function now sorts and tests on long file-
		names, with the new mangle function an DOS 8.3 filename is
		also stored in the file database.
		For all files received in tic area, the crc of the tic area
		name is stored in the filerecord. This is for the future 
		rescan option.